--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -70,7 +70,8 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  max-width: 800px;
+  max-width: 60em;
+  list-style: none;
 }
 
 .card {
