--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -70,7 +70,7 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  max-width: 60em;
+  max-width: 65em;
   list-style: none;
 }
 
@@ -114,4 +114,17 @@
     width: 100%;
     flex-direction: column;
   }
+}
+
+.button {
+  color: white;
+  font-family: inherit;
+  font-size: .9em;
+  font-weight: 700;
+  background-color: blueviolet;
+  padding: .8em 1.4em;
+  border-radius: .2em;
+  border: 0;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, .4);
+  cursor: pointer;
 }
